recursion.lessons.recursion.koch.Koch.scala.error
Koch:13: error: not found: value Baissecrayon
	Baissecrayon()
        ^Koch:14: error: not found: value color
	setCouleur(color.red:Color)
                   ^